--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="total_deaths">Total Deaths</string>
     <string name="total_recovered">Total Recovered</string>
 
+    <string name="plots_home">Total</string>
     <string name="plots_menu">Plots</string>
     <string name="world_menu">World</string>
 
